Fix 100vh overflow, move font-family to *{}

--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
 :root {
   --bg-main-color: rgb(69, 69, 69);
   --font-main-color: white;
-
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-html,
-body {
-  height: 100%;
-  overflow: hidden;
+* {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  
+  box-sizing: border-box;
+}
+
+html {
+  height: 100dvh;
 
   background-color: var(--bg-main-color);
   color: var(--font-main-color);
@@ -17,4 +19,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+html {
+  border: dashed 5px var(--font-main-color);
 }
